# fAIr

./: .cz.toml  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Readme.md  docker-compose _cpu.yml  docker-compose-cpu.yml  docker-compose.yml  run_migrations.sh  setup-ramp.sh
backend/: .$fAIr_backend.drawio.bkp  .pre-commit-config.yaml  .sample.env  CHANGELOG.md  Dockerfile  Dockerfile _CPU  Dockerfile.API  Dockerfile_CPU  README.md  api-entrypoint.sh  api-requirements.txt  backend_README.md  docker-compose.yml  docker_sample_env  library.sh  manage.py  pyproject.toml  requirements.txt  sample_env
backend/aiproject/: .env_sample  .sample.env  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
backend/core/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/core/management/commands/: rename.py  runserver_with_q.py
backend/docker/ramp/: docker-requirements.txt
backend/docker/ramp/solaris/: setup.py
backend/docker/ramp/solaris/solaris/: __init__.py
backend/docker/ramp/solaris/solaris/data/: __init__.py
backend/docker/ramp/solaris/solaris/preproc/: image.py  sar.py
backend/docker/ramp/solaris/solaris/tile/: raster_tile.py  vector_tile.py
backend/docker/ramp/solaris/solaris/utils/: config.py  geo.py  raster.py
backend/docs/: backend_README.md  fAIr_backend.drawio
backend/login/: admin.py  authentication.py  models.py  permissions.py  urls.py  views.py
backend/tests/: factories.py  test_core_dataset_model.py  test_endpoints.py  test_models_core.py  test_runners.py  test_views.py
docs/: About.md  (+9 more)
(+625 files in other folders)
